# ghidra-retro-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
assets/: README.md
src/ghidra_bizhawk_mcp/: ghidra_bridge.py  server.py
src/ghidra_bizhawk_mcp/lua/: bridge.lua
src/ghidra_bizhawk_mcp/tools/: bizhawk_bridge.py  emulation.py  persistent_signatures.py  retro_triage.py  signatures.py
src/ghidra_headless_mcp/: ghidra_bridge.py  server.py
src/ghidra_headless_mcp/tools/: persistent_signatures.py
src/ghidra_retro_mcp/: ghidra_bridge.py  server.py
src/ghidra_retro_mcp/tools/: reporter.py  retro_triage.py
tests/: test_bizhawk_bridge.py  test_emulation_benchmark.py
