[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghidra-bizhawk-mcp"
version = "1.0.0"
description = "A unified Model Context Protocol (MCP) server bridging Ghidra's static analysis with BizHawk's live emulation for retro-reversing and bare-metal firmware analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: System :: Emulators",
]
dependencies = [
    "mcp>=1.0.0",
]
[project.optional-dependencies]
ghidra = ["pyghidra>=3.0"]

[project.urls]
Homepage = "https://github.com/getanirao/ghidra-bizhawk-mcp"

[project.scripts]
ghidra-bizhawk-mcp = "ghidra_bizhawk_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ghidra_bizhawk_mcp*"]
